--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="type">Type</string>
     <string name="reference_id">Reference ID</string>
     <string name="submit">Submit</string>
+    <string name="form_factor">Form Factor: </string>
 </resources>
